@@ -22,6 +22,9 @@
 
 	<H3 _HD_OMIT_TOC>Changes</H3>
 
+	<LI>Now use a 0.001 point tolerance when checking for
+	content that overflows the page/cell.
+
 	<LI>HTMLDOC no longer enables interpolation of 2-color
 	images.
 
